add locked lore & name
Signed-off-by: Skyslycer <Skyslycer@users.noreply.github.com>